<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im"
    >
        <LinearLayout
            android:id="@+id/quiz_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            >
            <ImageView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:src="@drawable/ww"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="instrucions"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                style="@style/style1"
                android:textColor="#76FF03"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inst"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#9FA8DA"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule1"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#9FA8DA"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule2"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#9FA8DA"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule3"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#9FA8DA"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rule"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#9FA8DA"/>
            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="18sp"
                style="@style/style1"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/question1_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_choice1"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question1_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice2"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question1_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice3"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question1_choice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question1_choice4"
                    style="@style/style2"/>
            </RadioGroup>
            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="18sp"
                style="@style/style1"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/question2_choice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_choice1"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question2_choice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice2"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question2_choice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice3"
                    style="@style/style2"/>
                <RadioButton
                    android:id="@+id/question2_choice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/question2_choice4"
                    style="@style/style2"/>
            </RadioGroup>
            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="18sp"
                style="@style/style1"/>
            <CheckBox
                android:id="@+id/question3_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice1"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question3_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice2"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question3_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice3"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question3_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice4"
                style="@style/style2"/>
            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="18sp"
                style="@style/style1"/>
            <CheckBox
                android:id="@+id/question4_choice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice1"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question4_choice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice2"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question4_choice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice3"
                style="@style/style2"/>
            <CheckBox
                android:id="@+id/question4_choice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice4"
                style="@style/style2"/>
            <TextView
                android:id="@+id/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/question5_answer"
                android:text="@string/question5"
                android:textSize="18sp"
                style="@style/style1"/>

            <EditText
                android:id="@+id/question5_answer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/style2"/>
            <TextView
                android:id="@+id/question6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/question6_answer"
                android:text="@string/question6"
                android:textSize="18sp"
                style="@style/style1"/>
            <EditText
                android:id="@+id/question6_answer"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                style="@style/style2"/>
            <Button
                android:id="@+id/submit_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitAnswers"
                android:text="@string/submit_answers"
                android:background="#B2FF59"
                style="@style/style1"
                android:textColor="#000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RESULT = "
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="#B388FF"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="30sp"
                    android:id="@+id/result_text_view"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textColor="#FFAB91"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Message"
                android:textSize="20sp"
                android:id="@+id/message_text_view"
                style="@style/style1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Each"
                android:textSize="20sp"
                android:id="@+id/each_text_view"
                style="@style/style1"/>
        </LinearLayout>
</ScrollView>